--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,5 +19,5 @@ jobs:
       - name: Run tests
         uses: borales/actions-yarn@v2.3.0
         with:
-          cmd: test:unit
+          cmd: test
 
