--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "Here is my serverless images api where I have lambdas behind apis",
   "node": ">=16.0.0",
   "scripts": {
-    "test:unit": "./node_modules/.bin/jest --testPathIgnorePatterns=\"(tests/integration)\" --coverage",
+    "test": "./node_modules/.bin/jest --testPathIgnorePatterns=\"(tests/integration)\" --coverage",
     "test:integration": "./node_modules/.bin/jest --testPathPattern=\"(tests/integration)\" --coverage",
     "lint": "eslint './*.js' && eslint './**/*.js'"
   },
@@ -20,23 +20,21 @@
   },
   "homepage": "https://github.com/astaBean/images-api-serveless#readme",
   "dependencies": {
-    "aws-sdk": "^2.1137.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "aws-sdk": "^2.1154.0",
     "joi": "^17.6.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.18.2",
-    "@babel/plugin-transform-modules-commonjs": "^7.17.12",
-    "@babel/preset-env": "^7.6.3",
-    "eslint": "^8.0.1",
+    "babel-eslint": "^10.1.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.2",
     "eslint-plugin-promise": "^6.0.0",
-    "jest": "^28.1.0",
-    "regenerator-runtime": "^0.13.9",
-    "serverless": "^3.18.2",
-    "serverless-auto-swagger": "^2.5.1",
+    "jest": "^28.1.1",
+    "serverless": "^3.19.0",
     "serverless-bundle": "^5.3.0",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^8.8.0",
