--- a/serverless.yml
+++ b/serverless.yml
@@ -1,9 +1,9 @@
 frameworkVersion: '3'
 configValidationMode: error
 service: images-api-serverless
+useDotenv: true
 
 plugins:
-  - serverless-auto-swagger
   - serverless-bundle
   - serverless-s3-local
   - serverless-dynamodb-local
@@ -18,6 +18,8 @@ custom:
     host: localhost
     directory: ./s3local
     port: 4569 # this is a default port but adding it explicitly just not to forget
+    cors: ./configFilesLocal/s3Rules.xml
+    allowMismatchedSignatures: true
   dynamodb:
     stages:
       - dev
@@ -32,17 +34,31 @@ provider:
   httpApi:
     cors: true
   runtime: nodejs16.x
-  stage: ${opt:stage, 'dev'}
+  stage: dev
   endpointType: regional
-  profile: ${opt:profile, 'dev'}
+  profile: ${env:PROFILE}
   timeout: 20
-  region: ${opt:region, 'eu-west-2'}
+  region: ${env:REGION, 'eu-west-2'}
+  s3:
+    imagesBucket:
+      name: ${self:provider.environment.S3_BUCKET_NAME}
+      corsConfiguration:
+        CorsRules:
+          - AllowedOrigins:
+              - '*'
+            AllowedHeaders:
+              - '*'
+            AllowedMethods:
+              - PUT
+            MaxAge: 3000
+
+
   environment:
-    APP_ENV: ${self:custom.stage, 'dev'}
-    IS_PRODUCTION: ${param:production, false}
-    DYNAMODB_TABLE: ${self:service}-${opt:stage, self:provider.stage}
+    NODE_ENV: ${self:custom.stage, 'dev'}
+    IS_PRODUCTION: ${env:IS_PRODUCTION, false}
+    DYNAMODB_TABLE: ${self:service}-${self:provider.stage}
     NODE_OPTIONS: --enable-source-maps
-    IS_LOCAL: true
+    IS_LOCAL: ${env.IS_LOCAL, true}
     S3_BUCKET_NAME: images
   iam:
     role:
@@ -55,7 +71,7 @@ provider:
             - dynamodb:PutItem
             - dynamodb:UpdateItem
             - dynamodb:DeleteItem
-          Resource: "arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.DYNAMODB_TABLE}"
+          Resource: "arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.DYNAMODB_TABLE}"
 
 functions:
   createImage:
@@ -97,12 +113,6 @@ functions:
 
 resources:
   Resources:
-
-    s3Bucket:
-      Type: AWS::S3::Bucket
-      Properties:
-        BucketName: ${self:provider.environment.S3_BUCKET_NAME}
-
     imagesDynamoDbTable:
       Type: AWS::DynamoDB::Table
       Properties:
