--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "images-api",
+  "name": "images-api-serverless",
   "version": "0.0.1",
   "license": "UNLICENSED",
   "private": true,
-  "description": "Here is my serverless images api where I have lambdas behind apis",
+  "description": "This is my serverless images api where I have lambdas behind apis",
   "node": ">=16.0.0",
   "scripts": {
     "test": "./node_modules/.bin/jest --testPathIgnorePatterns=\"(tests/integration)\" --coverage",
@@ -12,13 +12,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/astaBean/images-api-serveless.git"
+    "url": "git+https://github.com/astaBean/images-api-serverless.git"
   },
   "author": "Asta Malyskaite",
   "bugs": {
-    "url": "https://github.com/astaBean/images-api-serveless/issues"
+    "url": "https://github.com/astaBean/images-api-serverless/issues"
   },
-  "homepage": "https://github.com/astaBean/images-api-serveless#readme",
+  "homepage": "https://github.com/astaBean/images-api-serverless#readme",
   "dependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
@@ -39,11 +39,5 @@
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^8.8.0",
     "serverless-s3-local": "^0.6.22"
-  },
-  "jest": {
-    "setupFilesAfterEnv": [
-      "./setupTests.js"
-    ],
-    "testEnvironment": "node"
   }
 }
